@@ -8,7 +8,9 @@ SSD1306xLED - Drivers for SSD1306 controlled dot matrix OLED/PLED 128x64 display
 
 SSD1306xLED is a C library for working with the SSD1306 display driver to control dot matrix OLED/PLED 128x64 displays. It is intended to be used with the Tinusaur board but should also work with any other board based on ATtiny85 or similar microcontroller.
 
-The SSD1306xLED library is written in plain C and does not require any additional libraries to function except those that come with the WinAVR SDK.
+The SSD1306xLED library is written in plain C and does not require any additional libraries to function except those that come with the SDK.
+
+This library has support for and tested work with the 8 MHz CPU clock mode.
 
 Modules, folders and files Structure:
 
