@@ -62,7 +62,7 @@ MCU = attiny85
 #         F_CPU = 16000000
 #         F_CPU = 18432000
 #         F_CPU = 20000000
-F_CPU = 1000000
+F_CPU = 8000000
 
 
 # Output format. (can be srec, ihex, binary)
