@@ -3,6 +3,14 @@ CHANGES
 
 2016-05-01 (nb)
 
+Added support for, and tested to work with, 8 MHz CPU clock. Other small fixes.
+
+- Added support for, and tested to work with, 8 MHz CPU clock. Using CPUFREQ.
+- Replaced "while (1)" with "for (;;)".
+
+
+2016-05-01 (nb)
+
 Renamed function names - for clarity, added new. Improved testing script.
 
 - Refactoring: renamed ssd1306_fillp to ssd1306_fill2; ssd1306_char_f8x16 to ssd1306_string_font8x16xy.
